--- a/etc/newphonics.css
+++ b/etc/newphonics.css
@@ -103,9 +103,16 @@ footer{
     text-align: center;
     font-size: 15px;
     color: white;
-    background-color:rgb(25, 31, 104);
+    background-color:rgb(255, 255, 255);
     width:100%;    
     height: 25px;
+}
+
+.credit-text{
+    background-color: #2b6cb0; /* blue background for text only */
+    padding: 2px 6px; /* small padding so the colored area hugs the text */
+    color: white; /* ensure text is readable */
+    border-radius: 3px;
 }
 
 .realbutton{
@@ -118,9 +125,9 @@ footer{
 .justbutton{
     cursor: pointer;
     width: 100px;
-    height: 20px;
+    height: 30px;
     /*border-radius: 3px;*/
-    font-size:xx-small;
+    font-size:x-small;
 }
 
 .questionimage imge {
